# my_currency

./: .coveragerc  .env_example  .pre-commit-config.yaml  Makefile  README.md  deleteme.py  pyproject.toml  pytest.ini
src/my_currency/application/: commands.py  dtos.py  handlers.py  interfaces.py  requests.py  responses.py  symbols.py
src/my_currency/application/services/: exchange_rates_fetcher.py  time_series_generators.py
src/my_currency/controllers/: __init__.py  manage.py
src/my_currency/controllers/apps/: __init__.py
src/my_currency/controllers/apps/currencies/: admin.py  apps.py  models.py  urls.py  views.py
src/my_currency/controllers/apps/currencies/migrations/: 0001_initial.py  __init__.py
src/my_currency/controllers/apps/providers/: __init__.py  admin.py  apps.py  models.py  views.py
src/my_currency/controllers/apps/providers/migrations/: 0001_initial.py  __init__.py
src/my_currency/controllers/apps/users/: __init__.py  admin.py  apps.py  forms.py  manager.py  mixins.py  models.py
src/my_currency/controllers/apps/users/migrations/: 0001_initial.py  __init__.py
src/my_currency/controllers/config/: __init__.py  asgi.py  urls.py  wsgi.py
src/my_currency/controllers/settings/: __init__.py  base.py  local.py  test.py
src/my_currency/dependency_injection/: container.py  dispatcher.py  factories.py
src/my_currency/domain/models/: exceptions.py  exchange_rates.py
src/my_currency/infrastructure/: __init__.py  exceptions.py  executors.py  finders.py  providers.py  repositories.py  serializers.py
tests/unit/domain/: __init__.py  test_models.py
