[tool.poetry]
name = "my-currency"
version = "0.1.0"
description = ""
authors = ["Andres Plazas <acpr87@gmail.com>"]
readme = "README.md"
packages = [{include = "my_currency", from = "src"}]


[tool.poetry.dependencies]
python = "~3.11"
psycopg2-binary = "^2.9.5"
django = "^4.1.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.254"
pre-commit = "^3.1.1"
black = "^23.1.0"
mypy = "^1.1.1"
djlint = "^1.25.0"
django-extensions = "^3.2.1"
django-debug-toolbar = "^4.0.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"


[tool.mypy]
python_version = 3.11
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
follow_imports = "skip"


[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "D", "I"]
ignore = ["D407", "D203", "D212", "F405", "F403"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 110

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | \.pytest_cache
  | build
  | dist
  | notebooks
)/
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
